add content type search using instanceof for filtering